# speexdsp_android_demo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gloomyer/myspeex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: myspeex.cpp
app/src/main/cpp/include/speex/: speexdsp_config_types.h
app/src/main/java/com/gloomyer/myspeex/: MainActivity.java
app/src/main/java/com/gloomyer/myspeex/interfaces/: SpeexJNIBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gloomyer/myspeex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
speexdsp-1.2rc3/: Android.mk  Application.mk  Makefile  build_anroid.sh  config.h  config.status  libtool  speexdsp.pc
speexdsp-1.2rc3/doc/: Makefile
speexdsp-1.2rc3/include/: Makefile
speexdsp-1.2rc3/include/speex/: Makefile
speexdsp-1.2rc3/libspeexdsp/: Makefile
speexdsp-1.2rc3/symbian/: Makefile
speexdsp-1.2rc3/ti/: Makefile
speexdsp-1.2rc3/ti/speex_C54_test/: Makefile
speexdsp-1.2rc3/ti/speex_C55_test/: Makefile
speexdsp-1.2rc3/ti/speex_C64_test/: Makefile
speexdsp-1.2rc3/win32/: Makefile
speexdsp-1.2rc3/win32/VS2003/: Makefile
speexdsp-1.2rc3/win32/VS2003/libspeexdsp/: Makefile
speexdsp-1.2rc3/win32/VS2003/tests/: Makefile
speexdsp-1.2rc3/win32/VS2005/: Makefile
speexdsp-1.2rc3/win32/VS2005/libspeexdsp/: Makefile
speexdsp-1.2rc3/win32/VS2005/tests/: Makefile
speexdsp-1.2rc3/win32/VS2008/: Makefile
speexdsp-1.2rc3/win32/libspeexdsp/: Makefile
(+2 files in other folders)
